pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec-553-links.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 122
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/553-links.md
---
foo bar[1]

[1]: /url title
